DATA — add all consonants

--- a/css/index.styl
+++ b/css/index.styl
@@ -1,3 +1,9 @@
 @import './config'
+@import './mixin'
 
 @import './global'
+
+@import './atomic/typography'
+
+@import './module/list'
+@import './module/letter'
