--- a/css/config.styl
+++ b/css/config.styl
@@ -7,6 +7,7 @@ $gutter     = 16px;
 $c-white      = white;
 $c-black      = #333;
 $c-blue       = blue;
+$c-grey       = #999;
 $c-grey-light = #CCC;
 
 $c-brand      = $c-blue;
