--- a/css/index.styl
+++ b/css/index.styl
@@ -4,6 +4,7 @@
 @import './global'
 
 @import './atomic/typography'
+@import './atomic/button'
 
 @import './module/list'
 @import './module/letter'
