SIMILAR — add first example

--- a/css/atomic/typography.styl
+++ b/css/atomic/typography.styl
@@ -4,3 +4,10 @@
   text-transform: uppercase;
 }
 
+.thai-letter {
+  font-size: 1.5em;
+  font-weight: 200;
+  line-height: .8;
+  color: $c-brand-dark;
+}
+
