--- a/css/config.styl
+++ b/css/config.styl
@@ -4,11 +4,12 @@ $gutter     = 16px;
 // COLORS
 ///////
 
-$c-white      = white;
-$c-black      = #333;
-$c-blue       = blue;
-$c-grey       = #999;
-$c-grey-light = #CCC;
+$c-white          = white;
+$c-black          = #333;
+$c-blue           = blue;
+$c-grey-lightest  = #F9F9F9;
+$c-grey-light     = #CCC;
+$c-grey           = #999;
 
-$c-brand      = $c-blue;
-$c-brand-dark = darken($c-brand, 20%);
+$c-brand          = $c-blue;
+$c-brand-dark     = darken($c-brand, 40%);
