SIMILAR — fix order

--- a/css/module/table.styl
+++ b/css/module/table.styl
@@ -16,7 +16,10 @@ td {
   }
 }
 td:first-child {
-  padding: $gutter ($gutter/2);
+  padding: $gutter $gutter;
+}
+td:last-child {
+  padding-right: $gutter;
 }
 tr:nth-child(odd) {
   background: $c-grey-lightest;
