NAV — add on all pages

--- a/css/config.styl
+++ b/css/config.styl
@@ -7,9 +7,13 @@ $gutter     = 16px;
 $c-white          = white;
 $c-black          = #333;
 $c-blue           = blue;
+$c-pink           = #ff0078;
 $c-grey-lightest  = #F9F9F9;
 $c-grey-light     = #CCC;
 $c-grey           = #999;
 
 $c-brand          = $c-blue;
 $c-brand-dark     = darken($c-brand, 40%);
+// $c-brand          = $c-pink;
+// $c-brand-dark     = darken($c-brand, 55%);
+
