--- a/css/index.styl
+++ b/css/index.styl
@@ -6,6 +6,7 @@
 @import './atomic/typography'
 @import './atomic/button'
 
+@import './module/top-nav'
 @import './module/list'
 @import './module/table'
 @import './module/letter'
