SIMILAR — remove standalone page

--- a/css/global.styl
+++ b/css/global.styl
@@ -23,34 +23,8 @@ header {
 }
 
 header,
-.main,
-footer {
+.main {
   padding: $gutter;
-}
-footer {
-  border-top: 1px solid $c-black;
-}
-.footer-action {
-  padding: 0;
-  display: flex;
-
-  > * {
-    padding: $gutter;
-    text-align: center;
-    flex-grow: 1;
-  }
-}
-
-.settings {
-  position: absolute;
-  right: ($gutter/2);
-  top: @right;
-  color: $c-brand;
-  text-decoration: none;
-  width: 40px;
-  height: 40px;
-  font-size: 3em;
-  text-align: center;
 }
 
 .main {
