--- a/css/atomic/typography.styl
+++ b/css/atomic/typography.styl
@@ -4,10 +4,12 @@
   text-transform: uppercase;
 }
 
-.thai-letter {
+.thai-letter,
+.thai-letter a {
   font-size: 1.5em;
   font-weight: 200;
   line-height: .8;
   color: $c-brand-dark;
+  text-decoration: none;
 }
 
