--- a/css/global.styl
+++ b/css/global.styl
@@ -17,18 +17,32 @@ body {
   flex-direction: column;
   min-height: 100vh;
 }
-
 header {
   position: relative;
 }
 
 header,
-.main {
+.main,
+footer {
   padding: $gutter;
+}
+footer {
+  border-top: 1px solid $c-black;
+  padding-bottom: ($gutter/2);
+  > * {
+    margin: .5em 0 0;
+  }
 }
 
 .main {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+}
+
+.version {
+  font-size: 12px;
+  margin-top: 1em;
+  text-align: center;
+  color: $c-grey;
 }
