NAV — fix small buttons

--- a/css/module/top-nav.styl
+++ b/css/module/top-nav.styl
@@ -1,14 +1,15 @@
 .top-nav {
   order: -1;
   background: $c-black;
-  padding: ($gutter/2) $gutter;
   text-decoration: none;
   color: $c-white;
-  min-height: 40px;
+
   display: flex;
   align-items: center;
 
   a {
+    height: 40px;
+    padding: ($gutter/1.25) $gutter;
     color: $c-white;
     text-decoration: none;
   }
