--- a/css/index.styl
+++ b/css/index.styl
@@ -5,6 +5,7 @@
 
 @import './atomic/typography'
 @import './atomic/button'
+@import './atomic/form'
 
 @import './module/top-nav'
 @import './module/list'
