VOWELS — basic support

--- a/css/atomic/typography.styl
+++ b/css/atomic/typography.styl
@@ -3,6 +3,10 @@
   font-weight: 300;
   text-transform: uppercase;
 }
+.h2 {
+  font-weight: 700;
+  text-transform: uppercase;
+}
 
 .thai-letter,
 .thai-letter a {
