--- a/css/global.styl
+++ b/css/global.styl
@@ -21,6 +21,16 @@ header {
   position: relative;
 }
 
+dl,
+dd {
+  padding:  0;
+  margin:   0;
+}
+dt {
+  padding: $gutter $gutter ($gutter/2);
+  background: $c-grey-lightest;
+}
+
 header,
 .main,
 footer {
