--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -51,6 +51,16 @@
   &.is-vowel > .thai-letter {
     font-size: 45vw;
   }
+  .thai-letter {
+    &.n-sip,
+    &.n-sip-et,
+    &.n-yi-sip { font-size: 75vw; }
+    &.n-roi {    font-size: 50vw; }
+    &.n-phan {   font-size: 35vw; }
+    &.n-muen {   font-size: 30vw; }
+    &.n-saen {   font-size: 25vw; }
+    &.n-lan {    font-size: 20vw; }
+  }
 }
 
 .letter-variant {
@@ -75,3 +85,4 @@
     }
   }
 }
+
