--- a/css/module/list.styl
+++ b/css/module/list.styl
@@ -43,3 +43,8 @@
     font-size: 10vw;
   }
 }
+.thai-letter.n-roi  { font-size: 12vw;}
+.thai-letter.n-phan { font-size: 9vw;}
+.thai-letter.n-muen { font-size: 7vw;}
+.thai-letter.n-saen { font-size: 6vw;}
+.thai-letter.n-lan {  font-size: 5.5vw;}
