LETTER — add letter translation

--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -18,13 +18,19 @@
 .letter-meaning {
   order: 1;
   margin: 0;
+  padding-bottom: 0;
 }
-.letter-meaning-thai {
-  display: none;
-}
+  .letter-meaning-translation {
+    display: block;
+    color: $c-grey;
+  }
+  .letter-meaning-thai {
+    display: none;
+  }
 
 .letter-pronunciation {
   order: 3;
+  padding-top: 0;
 }
 .letter-pronunciation-label {
   color: $c-grey;
