NAV — always on top

--- a/css/config.styl
+++ b/css/config.styl
@@ -14,6 +14,10 @@ $c-grey           = #999;
 
 $c-brand          = $c-blue;
 $c-brand-dark     = darken($c-brand, 40%);
-// $c-brand          = $c-pink;
-// $c-brand-dark     = darken($c-brand, 55%);
 
+
+///////
+// SIZES
+///////
+
+$s-nav            = 45px;
