--- a/css/index.styl
+++ b/css/index.styl
@@ -8,6 +8,7 @@
 @import './atomic/form'
 
 @import './module/top-nav'
-@import './module/list'
+@import './module/home'
 @import './module/table'
 @import './module/letter'
+
