--- a/css/module/home.styl
+++ b/css/module/home.styl
@@ -48,3 +48,20 @@
 .thai-letter.n-muen { font-size: 7vw;}
 .thai-letter.n-saen { font-size: 6vw;}
 .thai-letter.n-lan {  font-size: 5.5vw;}
+
+@media only screen and (min-width: 1024px) {
+  .preview-list-item {
+    width: 16.6vw;
+    &:nth-child(4n + 4) {
+      border-width: 0 1px 1px  0;
+    }
+    &:nth-child(6n + 6) {
+      border-width: 0 0 1px 0;
+    }
+
+
+    .thai-letter {
+      font-size: 20px !important;
+    }
+  }
+}
