--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -1,6 +1,6 @@
 .letter-container {
-  min-height: calc(100vh - 40px);
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
 }
 .letter-hint,
