RESPONSIVE - get better on bigger screens

--- a/css/config.styl
+++ b/css/config.styl
@@ -8,7 +8,7 @@ $c-white          = white;
 $c-black          = #333;
 $c-blue           = blue;
 $c-pink           = #ff0078;
-$c-grey-lightest  = #F9F9F9;
+$c-grey-lightest  = #F3F3F3;
 $c-grey-light     = #CCC;
 $c-grey           = #999;
 
@@ -21,3 +21,6 @@ $c-brand-dark     = darken($c-brand, 40%);
 ///////
 
 $s-nav            = 45px;
+
+$s-mq-big         = 1024px;
+$s-mq-small-only  = $s-mq-big - 1px;
