--- a/css/module/home.styl
+++ b/css/module/home.styl
@@ -26,14 +26,10 @@
     display: flex;
     flex-center();
   }
-
-  &:nth-child(4n + 4) {
-    border-width: 0 0 1px 0;
-  }
 }
 
 .preview-list-item-rtgs {
-  font-size: 12px;
+  font-size: 3vw;
   padding: .5em 0 .25em;
   order: -1;
 }
@@ -49,19 +45,51 @@
 .thai-letter.n-saen { font-size: 6vw;}
 .thai-letter.n-lan {  font-size: 5.5vw;}
 
-@media only screen and (min-width: 1024px) {
++mq('small-only') {
   .preview-list-item {
-    width: 16.6vw;
     &:nth-child(4n + 4) {
-      border-width: 0 1px 1px  0;
-    }
-    &:nth-child(6n + 6) {
       border-width: 0 0 1px 0;
     }
-
-
-    .thai-letter {
-      font-size: 20px !important;
+    &:nth-child(8n + 1),
+    &:nth-child(8n + 2),
+    &:nth-child(8n + 3),
+    &:nth-child(8n + 4) {
+      background: $c-grey-lightest;
     }
+  }
+}
+
++mq('big') {
+  .preview-list-item {
+    width: (100%/7);
+    min-height: 140px;
+
+    &:nth-child(7n + 7) {
+      border-width: 0 0 1px 0;
+    }
+    &:nth-child(14n + 1),
+    &:nth-child(14n + 2),
+    &:nth-child(14n + 3),
+    &:nth-child(14n + 4),
+    &:nth-child(14n + 5),
+    &:nth-child(14n + 6),
+    &:nth-child(14n + 7) {
+      background: $c-grey-lightest;
+    }
+    .thai-letter {
+      font-size: 80px;
+
+      .preview-list-vowels & {
+        font-size: 60px;
+      }
+      &.n-roi {   font-size: 70px;}
+      &.n-phan {  font-size: 55px;}
+      &.n-muen {  font-size: 45px;}
+      &.n-saen {  font-size: 35px;}
+      &.n-lan {   font-size: 25px;}
+    }
+  }
+  .preview-list-item-rtgs {
+    font-size: 20px;
   }
 }
