SEARCH — add a basic one

--- a/css/module/home.styl
+++ b/css/module/home.styl
@@ -33,6 +33,10 @@
   padding: .5em 0 .25em;
   order: -1;
 }
+.preview-list-item-meaning {
+  color: $c-grey;
+  font-size: 3vw;
+}
 
 .preview-list-vowels {
   .thai-letter {
@@ -89,7 +93,8 @@
       &.n-lan {   font-size: 25px;}
     }
   }
+  .preview-list-item-meaning,
   .preview-list-item-rtgs {
-    font-size: 20px;
+    font-size: 16px;
   }
 }
