--- a/css/module/top-nav.styl
+++ b/css/module/top-nav.styl
@@ -19,6 +19,17 @@
     display: inline-flex;
     align-items: center;
   }
+
+  input {
+    height: $s-nav;
+    margin: 0 $gutter;
+    flex-grow: 1;
+    background: none;
+    font-size: 18px;
+    color: $c-white;
+    outline: 0;
+    border: 0;
+  }
 }
 .top-nav-home:last-child {
   margin-right: auto;
