--- a/css/module/top-nav.styl
+++ b/css/module/top-nav.styl
@@ -7,17 +7,15 @@
   text-decoration: none;
   color: $c-white;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
   a {
     height: $s-nav;
-    padding: 0 $gutter;
+    padding: 1em $gutter;
     color: $c-white;
     text-decoration: none;
-    display: inline-flex;
+    display: inline-block;
     align-items: center;
+    position: relative;
+    z-index: 2;
   }
 
   input {
@@ -30,13 +28,19 @@
     outline: 0;
     border: 0;
   }
-}
-.top-nav-home:last-child {
-  margin-right: auto;
-  margin-left: auto;
-  transform: translateX(-50%);
-}
-
-.top-nav-settings:first-child {
-  margin-left: auto;
+  .top-nav-back {
+    float: left;
+  }
+  .top-nav-settings {
+    float: right;
+  }
+  .top-nav-home {
+    text-align: center;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
 }
