LETTER – first step letter

--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -1,3 +1,13 @@
+#letter {
+  position: fixed;
+  top:0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: auto;
+  background: $c-white;
+}
+
 .letter-container {
   min-height: 100vh;
 }
