LETTER – fix scroll

--- a/css/global.styl
+++ b/css/global.styl
@@ -11,6 +11,14 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.is-html-fixed,
+.is-html-fixed body,
+.is-html-fixed #main {
+  overflow: hidden;
+  // height: 100%;
+}
+
 body {
   background: $c-grey-light;
 }
