--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -4,7 +4,8 @@
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   background: $c-white;
 }
 
