SCROLL – fix on android

--- a/css/global.styl
+++ b/css/global.styl
@@ -13,10 +13,8 @@ body {
 }
 
 .is-html-fixed,
-.is-html-fixed body,
-.is-html-fixed #main {
+.is-html-fixed body {
   overflow: hidden;
-  // height: 100%;
 }
 
 body {
