--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -4,7 +4,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  overflow-y: scroll;
+  overflow: auto;
   -webkit-overflow-scrolling: touch;
   background: $c-white;
 }
