LAYOUT – add icons

--- a/css/global.styl
+++ b/css/global.styl
@@ -47,6 +47,9 @@ dt {
   padding: $gutter $gutter ($gutter/2);
   background: $c-grey-lightest;
 }
+.icon {
+  fill: currentColor;
+}
 
 header,
 .main,
