--- a/html/index.jade
+++ b/html/index.jade
@@ -23,6 +23,7 @@ html(lang="en", manifest= isProd ? "cache.manifest" : undefined)
     script(src="thailpha.js")
 
   body
+    include svg-symbols.svg
     #main
     if isProd
       script(type='text/javascript').
