--- a/css/atomic/form.styl
+++ b/css/atomic/form.styl
@@ -14,6 +14,9 @@ label::before {
   border: 1px solid $c-grey-light;
   margin: 0 .5em 0 0;
 }
+label ~ label {
+  margin-top: $gutter;
+}
 input:checked + label::before {
   content: '\2713';
   background: $c-brand;
