--- a/css/config.styl
+++ b/css/config.styl
@@ -15,6 +15,8 @@ $c-grey           = #999;
 $c-brand          = $c-blue;
 $c-brand-dark     = darken($c-brand, 40%);
 
+$c-high           = rgba(yellow, .05);
+$c-low            = rgba($c-grey-lightest, .5);
 
 ///////
 // SIZES
