--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -60,6 +60,12 @@
   &.is-vowel > .thai-letter {
     font-size: 45vw;
   }
+  &.class-high {
+    background: $c-high;
+  }
+  &.class-low {
+    background: $c-low;
+  }
   .thai-letter {
     &.n-sip,
     &.n-sip-et,
