--- a/css/module/home.styl
+++ b/css/module/home.styl
@@ -11,13 +11,7 @@
   border: 1px solid $c-grey-light;
   border-width: 0 1px 1px  0;
   cursor: pointer;
-
-  &.class-high {
-    background: $c-high;
-  }
-  &.class-low {
-    background: $c-low;
-  }
+  position: relative;
 
   p {
     margin: 0;
@@ -32,7 +26,25 @@
 .preview-list-item-rtgs {
   font-size: 3vw;
   padding: .5em 0 .25em;
+  white-space: pre;
   // order: -1;
+
+  .class-low &::before,
+  .class-high &::before {
+    content: '  ';
+    visibility: hidden;
+  }
+
+  .class-high &::before,
+  .class-high &::after {
+    content: ' +';
+    color: green;
+  }
+  .class-low &::before,
+  .class-low &::after {
+    content: ' –';
+    color: red;
+  }
 }
 .preview-list-item-meaning {
   color: $c-grey;
@@ -55,6 +67,12 @@
     &:nth-child(4n + 4) {
       border-width: 0 0 1px 0;
     }
+    &:nth-child(8n + 1),
+    &:nth-child(8n + 2),
+    &:nth-child(8n + 3),
+    &:nth-child(8n + 4) {
+      background: $c-grey-lightest;
+    }
   }
 }
 
@@ -65,6 +83,15 @@
 
     &:nth-child(7n + 7) {
       border-width: 0 0 1px 0;
+    }
+    &:nth-child(14n + 1),
+    &:nth-child(14n + 2),
+    &:nth-child(14n + 3),
+    &:nth-child(14n + 4),
+    &:nth-child(14n + 5),
+    &:nth-child(14n + 6),
+    &:nth-child(14n + 7) {
+      background: $c-grey-lightest;
     }
     .thai-letter {
       font-size: 80px;
