REACT – begin migration

--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -23,3 +23,9 @@ $s-nav            = 45px;
 
 $s-mq-big         = 1024px;
 $s-mq-small-only  = $s-mq-big - 1px;
+
+
+//----- MEDIA QUERIES
+
+$mq-big     = '(min-width: 1024px)';
+$mq-small   = '(max-width: 1023px)';
