--- a/css/global.styl
+++ b/css/global.styl
@@ -20,12 +20,12 @@ body {
 body {
   background: $c-grey-light;
 }
-#main {
+
+#app-wrapper {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   background: $c-white;
-
   > *:first-child {
     padding-top: $s-nav;
   }
@@ -35,9 +35,7 @@ body {
     margin: 0 auto;
   }
 }
-header {
-  position: relative;
-}
+
 dl,
 dd {
   padding:  0;
