--- a/css/index.styl
+++ b/css/index.styl
@@ -1,4 +1,4 @@
-@import './config'
+@import './_variables'
 @import './mixin'
 
 @import './global'
@@ -8,7 +8,7 @@
 @import './atomic/button'
 @import './atomic/form'
 
-@import './module/top-nav'
+@import './module/main-nav'
 @import './module/home'
 @import './module/table'
 @import './module/letter'
