--- a/css/module/main-nav.styl
+++ b/css/module/main-nav.styl
@@ -1,4 +1,4 @@
-.top-nav {
+.main-nav {
   position: fixed;
   top: 0;
   left: 0;
@@ -18,7 +18,7 @@
     z-index: 2;
   }
 
-  input {
+  &__search {
     height: $s-nav;
     margin: 0 $gutter;
     flex-grow: 1;
@@ -32,7 +32,7 @@
   .top-nav-back {
     float: left;
   }
-  .top-nav-settings {
+  &__settings {
     float: right;
   }
   .top-nav-home {
