--- a/css/global.styl
+++ b/css/global.styl
@@ -26,9 +26,7 @@ body {
   display: flex;
   flex-direction: column;
   background: $c-white;
-  > *:first-child {
-    padding-top: $s-nav;
-  }
+  padding-bottom: $s-nav;
 
   +mq('big') {
     max-width: 1280px;
@@ -51,37 +49,4 @@ body > svg {
 }
 .icon {
   fill: currentColor;
-}
-
-header,
-.main,
-footer {
-  padding: $gutter;
-}
-
-footer {
-  border-top: 1px solid $c-black;
-  padding-bottom: ($gutter/2);
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: white;
-
-  > * {
-    margin: .5em 0 0;
-  }
-}
-
-// .main {
-//   flex-grow: 1;
-//   display: flex;
-//   flex-direction: column;
-// }
-
-.version {
-  font-size: 12px;
-  margin-top: 1em;
-  text-align: center;
-  color: $c-grey;
 }
