APP – CHAR DETAIL – scroll to top on letter-change

--- a/css/global.styl
+++ b/css/global.styl
@@ -21,6 +21,11 @@ body {
   background: $c-grey-light;
 }
 
+body,
+.smooth-container {
+  scroll-behavior: smooth;
+}
+
 #app-wrapper {
   min-height: 100vh;
   display: flex;
