--- a/html/index.pug
+++ b/html/index.pug
@@ -19,6 +19,8 @@ html(lang="en")
 
     title= isProd ? 'Thailpha' : 'Thailpha Dev'
     link(rel="stylesheet", href="/thailpha.css")
+    script.
+      window.noZensmooth = true
 
   body
     include svg-symbols.svg
