--- a/css/global.styl
+++ b/css/global.styl
@@ -55,3 +55,25 @@ body > svg {
 .icon {
   fill: currentColor;
 }
+
+//----- REACT ANIMATIONS
+
+.fade-appear,
+.fade-enter {
+  opacity: 0;
+}
+
+.fade-appear-active,
+.fade-enter-active {
+  transition: opacity .3s linear;
+  opacity: 1;
+}
+
+.fade-exit {
+  transition: opacity .2s linear;
+  opacity: 1;
+}
+
+.fade-exit-active {
+  opacity: 0;
+}
