--- a/css/atomic/typography.styl
+++ b/css/atomic/typography.styl
@@ -19,6 +19,7 @@
   line-height: .8;
   color: $c-brand-dark;
   text-decoration: none;
+  // font-family: SF Optimized, system-ui, -apple-system, BlinkMacSystemFont, '.SFNSText-Regular', sans-serif;
 }
 
 .c-yo-ying,
@@ -27,3 +28,5 @@
 .c-tho-than {
   transform: translateY(-15%);
 }
+
+// Optimized
