APP – SEARCH – move in a separate tab

--- a/css/index.styl
+++ b/css/index.styl
@@ -12,5 +12,6 @@
 @import './module/home'
 @import './module/table'
 @import './module/letter'
+@import './module/search'
 
 @import './page/settings'
