--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -24,8 +24,18 @@ $s-nav            = 45px;
 $s-mq-big         = 1024px;
 $s-mq-small-only  = $s-mq-big - 1px;
 
-
 //----- MEDIA QUERIES
 
 $mq-big     = '(min-width: 1024px)';
 $mq-small   = '(max-width: 1023px)';
+
+
+///////
+// CSS VARS
+///////
+
+:root {
+  --nav-height: 50px;
+  --c-primary: $c-brand;
+  --c-primary-contrast: white;
+}
