APP – LETTER DETAIL – update layout

--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -26,8 +26,9 @@ $s-mq-small-only  = $s-mq-big - 1px;
 
 //----- MEDIA QUERIES
 
-$mq-big     = '(min-width: 1024px)';
-$mq-small   = '(max-width: 1023px)';
+$mq-big       = '(min-width: 1024px)';
+$mq-small     = '(max-width: 1023px)';
+$mq-landscape = '(orientation: landscape)';
 
 
 ///////
