--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -21,6 +21,7 @@ mq($$size) {
   }
 }
 
+// https://codepen.io/CrocoDillon/pen/fBJxu
 fluid-fs( $ffs = 1) {
   $ffsX2 = $ffs * 2
   'calc(%svw + %svh + %svmin)' % ($ffsX2 $ffsX2 $ffs);
