--- a/css/svg-symbols.css
+++ b/css/svg-symbols.css
@@ -8,6 +8,21 @@
   height: 18px;
 }
 
+.icon-ic_close_black_24px {
+  width: 24px;
+  height: 24px;
+}
+
+.icon-ic_info_outline_black_24px {
+  width: 24px;
+  height: 24px;
+}
+
+.icon-ic_search_black_24px {
+  width: 24px;
+  height: 24px;
+}
+
 .icon-settings {
   width: 20px;
   height: 20px;
