--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -99,13 +99,13 @@
   }
 }
 
-+mq('landscape') {
+@media $mq-landscape {
   .letter-container {
     position: relative;
     align-items: flex-end;
 
     .thai-letter {
-      font-size: 30vw;
+      font-size: fluid-fs( 5 );
       width: 75%;
       border-left: 1px solid $c-grey-light;
     }
@@ -159,12 +159,29 @@
   flex-grow: 1;
   display: flex;
 
-  li {
+  &:empty {
+    display: none;
+  }
+
+  @media $mq-landscape {
+    width: 75%;
+    margin: 0;
+    border-left: 1px solid $c-grey-light;
+  }
+
+  .thai-letter {
     display: flex;
     flex-center();
-
     flex-grow: 1;
     flex-basis: 1%;
 
+    @media $mq-landscape {
+      margin: $gutter;
+      font-size: fluid-fs( 3 );
+
+      & + .thai-letter {
+        margin-left: 0;
+      }
+    }
   }
 }
