--- a/css/module/search.styl
+++ b/css/module/search.styl
@@ -16,8 +16,14 @@
     margin: 0;
     width: var(--nav-height);
     flex-shrink: 0;
+    position: relative;
 
     svg {
+      // pos absolute centering because buttons doesn't play well with display flex everywhere
+      position: absolute;
+      top: 50;
+      left: @top;
+      transform: translate(-50%, -50%);
       fill: var(--c-primary-contrast);
     }
   }
