--- a/html/index.pug
+++ b/html/index.pug
@@ -11,16 +11,16 @@ html(lang="en")
 
     meta(name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
 
-    link(rel="apple-touch-icon", href="/touch-icon-iphone.png")
-    link(rel="apple-touch-icon", sizes="76x76" href="/touch-icon-ipad.png")
-    link(rel="apple-touch-icon", sizes="120x120" href="/touch-icon-iphone-retina.png")
-    link(rel="apple-touch-icon", sizes="152x152" href="/touch-icon-ipad-retina.png")
-    link(rel="apple-touch-icon", sizes="180x180" href="/touch-icon-iphone-6-plus.png")
+    link(rel="apple-touch-icon" href="/touch-icon-iphone.png")
+    link(rel="apple-touch-icon" sizes="76x76" href="/touch-icon-ipad.png")
+    link(rel="apple-touch-icon" sizes="120x120" href="/touch-icon-iphone-retina.png")
+    link(rel="apple-touch-icon" sizes="152x152" href="/touch-icon-ipad-retina.png")
+    link(rel="apple-touch-icon" sizes="180x180" href="/touch-icon-iphone-6-plus.png")
+
+    link(rel="manifest" href="/manifest.json")
 
     title= isProd ? 'Thailpha' : 'Thailpha Dev'
-    link(rel="stylesheet", href="/thailpha.css")
-    script.
-      window.noZensmooth = true
+    link(rel="stylesheet" href="/thailpha.css")
 
   body
     #main
