APP – fix 300ms delay

--- a/html/index.pug
+++ b/html/index.pug
@@ -9,7 +9,7 @@ html(lang="en")
 
     link(rel="icon" sizes="228x228" href="/touch-icon-iphone-6-plus.png")
 
-    meta(name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0")
+    meta(name="viewport" content="width=device-width")
 
     link(rel="apple-touch-icon" href="/touch-icon-iphone.png")
     link(rel="apple-touch-icon" sizes="76x76" href="/touch-icon-ipad.png")
