--- a/css/index.styl
+++ b/css/index.styl
@@ -3,6 +3,7 @@
 
 @import './global'
 @import './svg-symbols.css'
+@import './svg-chars.css'
 
 @import './atomic/typography'
 @import './atomic/button'
