--- a/css/mixin.styl
+++ b/css/mixin.styl
@@ -3,22 +3,11 @@ flex-center() {
   justify-content: center;
 }
 
-mq($$size) {
-  if ($$size == "small-only") {
-    @media only screen and (max-width: $s-mq-small-only) {
-      {block}
-    }
-  } else if ($$size == "big") {
-    @media only screen and (min-width: $s-mq-big) {
-      {block}
-    }
-  } else if ($$size == "landscape") {
-    @media only screen and (orientation: landscape) {
-      {block}
-    }
-  } else {
-    {block}
-  }
+// workaround for compiling grid-regions with stylus
+// https://github.com/stylus/stylus/issues/2306
+// b for bracket
+b(val) {
+  unquote("[") + val + unquote("]");
 }
 
 // https://codepen.io/CrocoDillon/pen/fBJxu
