--- a/css/module/letter.styl
+++ b/css/module/letter.styl
@@ -11,6 +11,48 @@
 
 .letter-container {
   height: calc(100vh - var(--nav-height));
+  display: flex;
+  flex-direction: column;
+
+  @media $mq-landscape {
+    display: grid;
+    grid-template-columns: 25% 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+      "meaning        letter"\
+      "pronunciation  letter";
+
+    &.has-variant {
+      grid-template-rows: $gutter 75px 1fr 1fr 75px $gutter;
+      grid-template-areas:
+      "meaning        letter"\
+      "meaning        letter"\
+      "meaning        letter"\
+      "pronunciation  letter"\
+      "pronunciation  variant"\
+      "pronunciation  gutter";
+    }
+
+    &.has-similar {
+      grid-template-rows: 1fr 1fr 50px;
+      grid-template-areas:
+      "meaning        letter"\
+      "pronunciation  letter"\
+      "similar-hint   similar-hint";
+    }
+  }
+
+  > .thai-letter {
+    flex-grow: 1;
+    font-size: fluid-fs( 1.5 );
+    display: flex;
+    flex-center();
+
+    @media $mq-landscape {
+      font-size: fluid-fs( .75 );
+      grid-area: letter;
+    }
+  }
 }
 .letter-hint,
 .letter-meaning,
@@ -23,25 +65,51 @@
   font-size: 7vw;
   padding: $gutter;
   font-weight: 300;
+  @media $mq-landscape {
+    font-size: 4vw;
+    border-right: 1px solid $c-grey-light;
+  }
 }
+
 .letter-meaning {
   margin: 0;
-  padding-bottom: 0;
-}
-  .letter-meaning-translation {
+  grid-area: meaning;
+
+  &__translation {
     display: block;
     color: $c-grey;
   }
-  .letter-meaning-thai {
+  &__thai {
     display: none;
   }
+}
 
 .letter-pronunciation {
-  padding-top: 0;
-}
-.letter-pronunciation-label {
-  color: $c-grey;
-  padding: 0 .5em;
+
+  @media $mq-landscape {
+    grid-area: pronunciation;
+    border-top: 1px solid $c-grey-light;
+    text-align: left;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  &__full {
+    grid-column: 1 / span 2;
+  }
+
+  &__label,
+  &__value {
+    display: inline-block;
+  }
+  &__label {
+    color: $c-grey;
+    padding: 0 .5em;
+
+    @media $mq-landscape {
+      padding: 0;
+    }
+  }
 }
 
 .letter-hint {
@@ -50,138 +118,36 @@
   margin: 0;
 }
 
-.letter-container {
-  > .thai-letter {
-    font-size: fluid-fs( 10 );
-    font-weight: 400;
-    line-height: 1;
-
-    @media $mq-big {
-      font-size: fluid-fs( 5 );
-    }
-  }
-
-  &.is-vowel > .thai-letter {
-    font-size: fluid-fs( 5 );
-
-    @media $mq-big {
-      $ffs    = 2.5
-      $ffsX2  = $ffs * 2
-      font-size: fluid-fs( 2.5 );
-    }
-  }
-
-  .thai-letter {
-    &.n-sip,
-    &.n-sip-et,
-    &.n-yi-sip { font-size: 75vw; }
-    &.n-roi {    font-size: 50vw; }
-    &.n-phan {   font-size: 35vw; }
-    &.n-muen {   font-size: 30vw; }
-    &.n-saen {   font-size: 25vw; }
-    &.n-lan {    font-size: 20vw; }
-  }
-}
-
 .letter-variant {
   list-style: none;
   padding: 0;
   margin: $gutter;
-
-  li {
-    border: 1px solid $c-grey-light;
-    font-size: 15vw;
-    line-height: 0;
-
-    + li {
-      border-left: 0;
-    }
-  }
-}
-
-@media $mq-landscape {
-  .letter-container {
-    position: relative;
-    align-items: flex-end;
-
-    .thai-letter {
-      font-size: fluid-fs( 5 );
-      width: 75%;
-      border-left: 1px solid $c-grey-light;
-    }
-    .letter-meaning,
-    .letter-pronunciation {
-      position: absolute;
-      width: 25%;
-      left: 0;
-      font-size: 4vw;
-    }
-    .letter-pronunciation {
-      padding-top: $gutter;
-      border-top: 1px solid $c-grey-light;
-      top: 50%;
-      span {
-        float: left;
-      }
-      .letter-pronunciation-label {
-        clear: left;
-      }
-    }
-
-    .letter-hint {
-      width: 100%;
-    }
-  }
-}
-.letter-container {
-  display: flex;
-  flex-direction: column;
-}
-.letter-meaning {
-  order: 1;
-}
-.letter-pronunciation {
-  order: 3;
-}
-.letter-hint {
-  order: 4;
-}
-.letter-container {
-  > .thai-letter {
-    order: 2;
-    flex-grow: 1;
-    display: flex;
-    flex-center();
-  }
-}
-.letter-variant {
-  order: 4;
-  flex-grow: 1;
-  display: flex;
+  // use grid to have an easier way to handle the gutter
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 1px;
+  font-size: .5em;
 
   &:empty {
     display: none;
   }
 
   @media $mq-landscape {
+    grid-gap: 1rem;
     width: 75%;
-    margin: 0;
+    margin: 0 auto;
     border-left: 1px solid $c-grey-light;
   }
 
   .thai-letter {
-    display: flex;
     flex-center();
-    flex-grow: 1;
-    flex-basis: 1%;
+    display: flex;
+    box-shadow:0 0 0 1px $c-grey-light;
+  }
+}
 
-    @media $mq-landscape {
-      margin: $gutter;
-      font-size: fluid-fs( 3 );
-
-      & + .thai-letter {
-        margin-left: 0;
-      }
-    }
+.letter-hint {
+  @media $mq-landscape {
+    grid-area: similar-hint;
   }
 }
