--- a/css/svg-chars.css
+++ b/css/svg-chars.css
@@ -228,17 +228,17 @@
   height: 6.25em;
 }
 
-.char-n-chet {
-  width: 6.25em;
-  height: 6.25em;
-}
-
 .char-n-ha {
   width: 6.25em;
   height: 6.25em;
 }
 
 .char-n-hok {
+  width: 6.25em;
+  height: 6.25em;
+}
+
+.char-n-jet {
   width: 6.25em;
   height: 6.25em;
 }
