LAYOUT – fix sub section headers

--- a/css/module/home.styl
+++ b/css/module/home.styl
@@ -88,6 +88,13 @@
   }
 }
 
+
+.char-subsection {
+  &__header {
+    padding: $gutter $gutter $half-gutter;
+    background: #f3f3f3;
+  }
+}
 .preview-list-item-rtgs {
   font-size: 3vw;
   padding: .5em 0 .25em;
