DETAIL – better char sizing

--- a/css/index.styl
+++ b/css/index.styl
@@ -10,9 +10,8 @@
 @import './atomic/form'
 
 @import './module/main-nav'
-@import './module/home'
-@import './module/table'
-@import './module/letter'
+@import './module/char-listing'
+@import './module/char-detail'
 @import './module/search'
 
 @import './page/settings'
