--- a/css/module/search.styl
+++ b/css/module/search.styl
@@ -21,7 +21,7 @@
     svg {
       // pos absolute centering because buttons doesn't play well with display flex everywhere
       position: absolute;
-      top: 50;
+      top: 50%;
       left: @top;
       transform: translate(-50%, -50%);
       fill: var(--c-primary-contrast);
