--- a/css/_variables.styl
+++ b/css/_variables.styl
@@ -1,5 +1,6 @@
-$gutter       = 16px;
-$half-gutter  = ($gutter / 2);
+$gutter           = 16px;
+$half-gutter      = ($gutter / 2);
+$quarter-gutter   = ($gutter / 4);
 
 ///////
 // COLORS
@@ -40,4 +41,7 @@ $mq-landscape = '(orientation: landscape)';
   --nav-height: 50px;
   --c-primary: $c-brand;
   --c-primary-contrast: white;
+  --gutter: $gutter;
+  --half-gutter: $half-gutter;
+  --quarter-gutter: $quarter-gutter;
 }
