--- a/css/global.styl
+++ b/css/global.styl
@@ -55,6 +55,20 @@ body > svg {
   fill: var(--c-primary);
 }
 
+.blockquote {
+  padding: var(--quarter-gutter) var(--gutter);
+  margin: var(--gutter) 0;
+  border-left: var(--quarter-gutter) solid $c-grey-lightest;
+
+  &__footer {
+    font-size: 80%;
+    color: $c-grey;
+    &::before {
+      content: "\2014 \00A0";
+    }
+  }
+}
+
 //----- REACT ANIMATIONS
 
 .fade-appear,
